# rosneuro_decoder_gaussian

./: CMakeLists.txt  README.md  package.xml  plugin_decoder_gaussian.xml
example/: gaussianCfg.yaml  rawprobRosneuro.csv  test_gaussian.cpp  test_gaussian.launch
include/rosneuro_decoder_gaussian/: Gaussian.h
src/: Gaussian.cpp
test/: TestGaussian.cpp  gaussianCfg.yaml  gaussianCfgTest.yaml  testGaussian.m  test_gaussian.cpp  test_gaussian.launch  test_node.launch
test/data/: features.csv  output.csv
